# embassy-template

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-generate.toml  memory.x  pre-script.rhai  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: handler.rs  main.rs
src/handler/: panic.rs  reset.rs
