[package]
edition = "2024"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
resolver = "3"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

{% if chip contains "nrf52" -%}
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-nrf = { version = "0.3", features = ["defmt", "{{ chip }}", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
{% endif -%}

{% if chip contains "nrf9151" -%}
embassy-nrf = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf9151-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
{% endif -%}

{% if chip contains "nrf9160" -%}
embassy-nrf = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
{% endif -%}

{% if chip contains "nrf91" -%}
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
# Due to embassy-net-nrf91 not yet being published to crates.io we need to use git versions of repos
embassy-executor = { git="https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-net-nrf91 = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
embassy-net = { git="https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "proto-ipv4", "medium-ip", "dns"] }
{% else -%}
embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
{% endif -%}

{% if chip contains "rp2040" -%}
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
{% endif -%}

{% if chip == "rp2350a" or chip == "rp2354a" -%}
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
{% endif -%}

{% if chip == "rp2350b" or chip == "rp2354b" -%}
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb"] }
{% endif -%}

{% if chip contains "stm32" -%}
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.1", features = ["defmt", "{{ chip }}", "unstable-pac", "memory-x", "time-driver-any" ]  }
{% endif -%}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
