[package]
edition = "2024"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
resolver = "2"

[[bin]]
name = "{{project-name}}"
test = false
bench = false

[dependencies]
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

{% if chip contains "nrf" -%}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
{% endif -%}

{% if chip contains "nrf52" -%}
embassy-nrf = { version = "0.9", features = ["defmt", "{{ chip }}", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
{% endif -%}

{% if chip contains "nrf54" -%}
embassy-nrf = { version = "0.9", features = ["defmt", "{{ chip }}-app-s", "time-driver-grtc", "gpiote", "unstable-pac", "time"] }
{% endif -%}

{% if chip contains "nrf91" -%}
embassy-nrf = { version = "0.9", features = ["defmt", "{{ chip }}-s", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-net-nrf91 = { version = "0.1", features = ["defmt"]}
embassy-net = { version = "0.7", features = ["defmt", "tcp", "proto-ipv4", "medium-ip", "dns"] }
{% endif -%}

{% if chip contains "rp2040" -%}
cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
{% endif -%}

{% if chip == "rp2350a" or chip == "rp2354a" -%}
cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa"] }
{% endif -%}

{% if chip == "rp2350b" or chip == "rp2354b" -%}
cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.9", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb"] }
{% endif -%}

{% if chip contains "stm32" -%}
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.4", features = ["defmt", "{{ chip }}", "unstable-pac", "memory-x", "time-driver-any" ]  }
{% endif -%}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
